--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,15 @@
     </header>
     <main>
         <div class="container">
+              {% with messages = get_flashed_messages() %}
+              {% if messages %}
+              <ul class="flashes">
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+                </ul>
+                {% endif %}
+{% endwith %}
             {% block main %}{% endblock %}
         </div>
     </main>
@@ -36,5 +45,9 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     {% block js %} {% endblock%}
+    
+    
+
   </body>
+
 </html>
